...

  "appTitle": "Midlands Cognitive Assessment",
  "@appTitle": {
    "description": "Application title displayed in app bar and browser tab"
  },

  "taskCompleted": "Task Completed",
  "continueButton": "Continue",
  "start": "Start",
  "clear": "Clear",
  "yes": "Yes",
  "no": "No",
  "done": "Done",
  "cancel": "Cancel",
  "ok": "OK",

  "normal": "Normal",
  "equivocal": "Equivocal",
  "impaired": "Impaired",

  "scoreSummary": "Score Summary",
  "results": "Results",

  "scrollDownToReveal": "Scroll down to reveal more instructions",
  "noteResponseAndScore": "Note the response of the patient and score as below.",
...
  "ambidextrous": "Ambidextrous",

  "domainAttention": "Attention",
  "domainLanguage": "Language",
  "domainMemory": "Memory",
  "domainPraxis": "Praxis",
  "domainGnosis": "Gnosis",
  "domainExecutive": "Executive",

  "trial1": "Trial 1",
  "trial2": "Trial 2",
  "trial3": "Trial 3",
  "verbal": "Verbal",
...
  "praxisImage1": "Image 1",
  "praxisImage2": "Image 2",
  "praxisImage3": "Image 3",

  "gnosisDomainTitle": "Gnosis",

  "gnosisIdentifyObjectsVisually": "Identify Objects Visually",
  "gnosisIdentifyObjectsByTouch": "Identify Objects by Touch",
  "gnosisFingerPerceptionTest": "Finger Perception Test",
  "gnosisClockDrawingTest": "Clock Drawing Test",

  "gnosisClockDrawingExplanation": "Drawing a clock requires a number of cognitive domains to work together. Guiding the hand involves praxis. Planning the task is executive functioning. Monitoring the result visually is gnosis.",
  "gnosisClockDrawingPatientInstruction": "\"Draw a clock face with the time set to 10 past five. It must have all the numbers and hands so that a child can read the time\"",
  "gnosisClockDrawingScoringIntro": "The instructions may be repeated once if required. A total of five points are awarded.\nMost people would be able to score full marks.",
  "gnosisClockDrawingScoreCriteria1": "- Score one point if the outer circle is present.",
  "gnosisClockDrawingScoreCriteria2": "- Score one point if all the numbers are present, in the correct order and in the appropriate quadrant. No other numbers or letters are allowed.",
...
